# crafting-interpreters

./: .gitignore  README.md
plox/: README.md  main.py  pyproject.toml
plox/lox-programs/: Ch09_conditional_print.lx  Ch10_params.lx  Ch12_firstInit.lx  Ch12_firstMethods.lx  Ch12_firstThis.lx  Ch13_firstInheritance.lx  complex_conditional.lx  hello_lox.lx  simple_while.lx
plox/plox_lib/: __init__.py  control_flow.py  environment.py  error.py  interpreter.py  lox.py  lox_callable.py  lox_class.py  lox_function.py  lox_instance.py  params.py  parser.py  resolver.py  scanner.py  token.py  token_type.py  utils.py
plox/plox_lib/asts/: __init__.py  ast_printer.py  expr.py  stmt.py
plox/tests/: fixtures.py  test_ast.py  test_interpreter.py  test_parser.py  test_scanner.py
plox/tests/test_programs/: mixed_01.lx  multiple_lines_01.lx
plox/tool/: ast.py
